# tb3_multi_nav

./: README.md  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  exec.sh  gpu_run.sh  run.sh
docker_ws/: Dockerfile.tag_game  build_project_tag_game.sh  ros_entrypoint.sh
ros_ws/: checkframes.sh  compile.sh  debugpray.sh  editconfig.sh  frames_2025-10-06_20.34.13.gv  gotolaunch.sh  gotopackage.sh  keyboard1.sh  map_to_cart.sh  mapray.sh  pray.sh  save_map.sh  test_single.gv  verbosepray.sh
ros_ws/debug_logs/: Mon Oct  6 19:21:28 UTC 2025.txt  Mon Oct  6 20:16:14 UTC 2025.txt  Mon Oct  6 20:30:37 UTC 2025.txt  Sat Sep 20 16:53:04 UTC 2025.txt  Sat Sep 20 16:58:01 UTC 2025.txt  Thu Oct  2 20:15:09 UTC 2025.txt  Thu Oct  2 20:26:54 UTC 2025.txt  Tue Oct  7 07:42:22 UTC 2025.txt  Tue Oct  7 07:52:40 UTC 2025.txt
ros_ws/frames_view/: TF_global_view.gv  during_mapping.gv
ros_ws/install/nav2_bringup/share/nav2_bringup/: local_setup.sh  package.sh
ros_ws/install/tb3_multi_nav/lib/tb3_multi_nav/: map_republisher  tfs_republisher
ros_ws/install/tb3_multi_nav/share/tb3_multi_nav/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros_ws/install/tb3_multi_robot/share/tb3_multi_robot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/log/: latest_build
ros_ws/src/tb3_multi_nav/: package.xml  setup.cfg  setup.py
ros_ws/src/tb3_multi_nav/config/: Backup_nav2_multi_paramnav2_waffle_robot1 copy.yaml  discarded_nodes.py  map.yaml  model.sdf  model_robot1.sdf  model_robot2.sdf  nav2_default_view.rviz  nav2_waffle_robot1.yaml  nav2_waffle_robot2.yaml  navigate_to_pose_w_replanning_and_recovery.xml  robot1_bridge.yaml  robot1_model.sdf  robot1_rviz_namespaced.rviz  robot1_turtlebot3_waffle_bridge.yaml  robot1_waffle.yaml  robot2_model.sdf  robot2_navigate_to_pose_w_replanning_and_recovery.xml  robot2_rviz_namespaced.rviz  robot2_turtlebot3_waffle_bridge.yaml  robot2_waffle.yaml  rviz_namespaced_singleBot.rviz  turtlebot3_waffle.urdf  turtlebot3_waffle_bridge.yaml  waffle.yaml
ros_ws/src/tb3_multi_nav/launch/: multi_tb3.launch.py  temp.py
ros_ws/src/tb3_multi_nav/tb3_multi_nav/: tfs_republisher.py
ros_ws/src/tb3_multi_nav/utils/: 2ndattempt_newmaze.pgm  2ndattempt_newmaze.yaml  [OBS]maze_world.world  cart_map.pbstream  maze_world.world  newmaze.pgm  newmaze.yaml  simple_maze.pgm  simple_maze.yaml
ros_ws/src/utils/: maze_world.world
(+32 files in other folders)
