<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb3_multi_nav</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_python</build_depend>
  
  <depend>launch_ros</depend>
  <depend>rviz2</depend>
  <depend>rclcpp</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>nav2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <!-- test incolla tutti i nav2 packages restanti-->
  <depend>nav2_behaviors</depend>
  <depend>nav2_collision_monitor</depend>
  <depend>nav2_common</depend>
  <depend>nav2_constrained_smoother</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d </depend>
  <depend>nav2_dwb_controller</depend>
  <depend>nav2_graceful_controller</depend>
  <depend>nav2_minimal_tb3_sim</depend>
  <depend>nav2_mppi_controller</depend>
  <depend>nav2_navfn_planner</depend>
  <depend>nav2_regulated_pure_pursuit_controller</depend>
  <depend>nav2_rotation_shim_controller</depend>
  <depend>nav2_rviz_plugins</depend>
  <depend>nav2_simple_commander</depend>
  <depend>nav2_smac_planner</depend>
  <depend>nav2_smoother</depend>
  <depend>nav2_theta_star_planner</depend>
  <depend>nav2_velocity_smoother</depend>
  <depend>nav2_voxel_grid</depend>
  <depend>nav2_waypoint_follower</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_util</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

